
Rewrote the POE::Wheel POD.

Found the Perl symbols that weren't being exported for OS/2 and AIX
(and maybe Windows).  Fixed makedef.pl to export them, and now Event
builds and tests ok.  Sweet!  Added initial Event support to
POE::Kernel and removed the Event caveats throughout POE's
documentation.  This is experimental until a proper test can be made.

Added t/06_tk.t to test Tk support.


0.1004 2000.05.21
-----------------

Rewrote the POE, POE::Kernel and POE::Session PODs.  Documented Tk
support.  Documented Event support, but it's not in yet.

t/04_select.t assumed that two-argument syswrite was legal, but it
isn't back in 5.005_02.  Added a length() call to make it legal on
older perls.  Thanks again, a-mused!

alarm_add() would enqueue an alarm for an undefined state.  Fixed it
to ignore such requests.

The call() method did not reliably set $! to zero on success.  Now it
does.

(!!!) Added parameter checking and return values to the timed event
functions: alarm, alarm_add, delay, and delay_add.

(!!!) alarm() and alarm_add() no longer clip past times to time(2).
Instead, events posted for the past will be entered into the
appropriate places in POE's time-ordered alarm/delay queue.  The
obvious results will occur.

(!!!) Changed POE::Kernel::alias_* to return 0 on success or an error
code on failure.  They no longer touch $!.

(!!!) Changed POE::Kernel::state to return 0 on success or an error
code on failure.  It no longer touches $!.

(!!!) Changed POE::Kernel::refcount_(in|de)crement to return the new
reference count on success or undef on failure.


0.1003 2000.05.12
-----------------

Addi found a list of Win32 error codes, including the elusive
EINPROGRESS.  I changed the dummy value to the correct one in
POE::Kernel and POE::Wheel::SocketFactory.  Now SocketFactory works on
Win32, in perl 5.005_03.  Mileage may vary as MSWin32 perl evolves.

I finally found a system where Perl/Tk builds.  This isn't a comment